--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('EmblemHumanWebsite.png') no-repeat left center, url('EmblemFlowerWebsit.png') no-repeat 600px center;
-            background-size: 600px 400px, 600px 400px;
+            background: url('EmblemHumanWebsite.png') no-repeat left center, url('EmblemFlowerWebsite.png') no-repeat 600px center;
+            background-size: 600px 400px, 700px 500px;
             z-index: -1;
         }
         
