--- a/index.html
+++ b/index.html
@@ -109,5 +109,9 @@
             is licensed under Creative Commons<br>
             Attribution-NonCommercial-ShareAlike 4.0 International    </p>
 
+            <p><b>Status Emblems © 2025 by Jaden Bisang, Max Furrer </b><br>
+                is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" >Creative Commons<br>
+                Attribution-NonCommercial-ShareAlike 4.0 International</a> </p>
+
 </body>
 </html>
