--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@
         .download-link {
             color: blue;
             text-decoration: underline;
-            text-underline-offset: 4px;
+            text-underline-offset: 5px;
             cursor: pointer;
         }
         
         .download-link:hover {
             background: #ff9ceb;
+        }
+
+        .cc-link {
+            text-underline-offset: 5px;
+            color: rgb(0,0,255);
+            cursor: pointer;
         }
     </style>
 </head>
@@ -105,13 +111,9 @@
 
         <br><br>
 
-        <p> <b>Status Emblems © 2025 by Jaden Bisang, Max Furrer </b><br>
-            is licensed under Creative Commons<br>
-            Attribution-NonCommercial-ShareAlike 4.0 International    </p>
-
-            <p><b>Status Emblems © 2025 by Jaden Bisang, Max Furrer </b><br>
-                is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" >Creative Commons<br>
-                Attribution-NonCommercial-ShareAlike 4.0 International</a> </p>
+        <p><b>Status Emblems © 2025 by Jaden Bisang, Max Furrer </b><br>
+                is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" class="cc-link">Creative Commons<br>
+                    Attribution-NonCommercial-ShareAlike 4.0 International</a> </p>
 
 </body>
 </html>
