--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('EmblemHumanWebsite.png') no-repeat left center, url('EmblemFlowerWebsite.png') no-repeat 600px center;
+            background: url('EmblemHumanWebsite.png') no-repeat 300 center, url('EmblemFlowerWebsite.png') no-repeat 900px center;
             background-size: 600px 400px, 700px 500px;
             z-index: -1;
         }
