--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('EmblemHumanWebsite.png') no-repeat left center, url('EmblemFlowerWebsite.png') no-repeat 900px center;
-            background-size: 600px 400px, 700px 500px;
+            background: url('EmblemHumanWebsite.png') no-repeat 250px right, url('EmblemFlowerWebsite.png') no-repeat 700px center;
+            background-size: 700px 500px, 800px 600px;
             z-index: -1;
         }
         
