--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('EmblemHumanWebsite.png') no-repeat 250px right, url('EmblemFlowerWebsite.png') no-repeat 700px center;
+            background: url('EmblemHumanWebsite.png') no-repeat 150px right, url('EmblemFlowerWebsite.png') no-repeat 900px center;
             background-size: 700px 500px, 800px 600px;
             z-index: -1;
         }
@@ -30,7 +30,7 @@
 
         h1 {
             font-family: 'AUTHENTIC Sans ', 'Neue Haas Grotesk', 'Helvetica Neue';
-            font-size: 25px;
+            font-size: 23px;
             margin-bottom: 20px;
             color: blue;
         }
@@ -43,7 +43,7 @@
             background: rgb(234, 234, 234);
             padding: 15px;
             margin: 10px 0;
-            border: 1px solid rgb(0,0,255);
+            border: 2px solid rgb(0,0,255);
             width: 400px;
             text-align: center;
         }
@@ -63,6 +63,11 @@
             text-underline-offset: 5px;
             color: rgb(0,0,255);
             cursor: pointer;
+        }
+
+        .emblem-download {
+            color: rgb(0,0,255);
+            
         }
     </style>
 </head>
@@ -92,7 +97,7 @@
  
 
     <div class="download">
-        <strong>EMBLEM DOWNLOAD</strong><br><br>
+        <strong>EMBLEM DOWNLOAD</strong> class="emblem-download" <br><br>
         > .Obj files of Scan (#105MB each):<br><br>
         <a href="StatusEmblem.zip" class="download-link" download>StatusEmblem.zip</a>
     </div>
@@ -112,8 +117,9 @@
         <br><br>
 
         <p><b>Status Emblems © 2025 by Jaden Bisang, Max Furrer </b><br>
-                is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" class="cc-link">Creative Commons<br>
+                This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" class="cc-link" target="_blank">Creative Commons<br>
                     Attribution-NonCommercial-ShareAlike 4.0 International</a> </p>
 
+            
 </body>
 </html>
